# humanize_behaviour

./: .gitignore  Dockerfile  challenge_manager.py  controller.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: 2.build-publish-python.yml  3.build-publish-docker.yml
docs/: testing_manuals.md
requirements/: requirements.build.txt  requirements.deploy.txt  requirements.test.txt
scripts/: release.sh
src/api/: __version__.py
src/api/endpoints/challenge/: router.py  schemas.py  service.py
